# densecrf

./: CMakeLists.txt  CRFBernat.cpp  CRFBernat.h  CRFTest.cpp  CRFTest.h  CRFTestPython.cpp  CRFTrain.h  dummypy.cpp  settings.h  testCRF.cpp  testTrainCRF.cpp
CRF_results/: 0001TP_006870_crf.xml
Params_camvid/: kernel_param.xml  label_param.xml  unary_param.xml
include/: CRFTest.h  CRFTrain.h
src/: densecrf.cpp
temp/: CMakeCache.txt  Makefile  cmake_install.cmake
